{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 268,
  "lineage": "757f2e76-e6df-7815-cdb6-dc51b862c5b4",
  "resources": [
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b94feda8e1ad9363",
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:elastic-ip/eipalloc-0b94feda8e1ad9363",
            "domain": "vpc",
            "id": "eipalloc-0b94feda8e1ad9363",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-186-238.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.186.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "poc-kkm-bastion-eip-an2-a",
              "Service": "bastion-eip"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-bastion-eip-an2-a",
              "Project": "kkm",
              "Service": "bastion-eip",
              "TerraformManaged": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0525853df9163f7a2",
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:elastic-ip/eipalloc-0525853df9163f7a2",
            "domain": "vpc",
            "id": "eipalloc-0525853df9163f7a2",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-203-47-118.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.47.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "poc-kkm-nat-eip-an2-a",
              "Service": "nat-eip-an2-a"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-nat-eip-an2-a",
              "Project": "kkm",
              "Service": "nat-eip-an2-a",
              "TerraformManaged": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1e61a80c7ab943e",
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:instance/i-028eb8651c0a47386",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20250403004050630800000001",
            "id": "i-028eb8651c0a47386",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07147fe286c3ce8ed",
            "private_dns": "ip-172-33-0-37.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.33.0.37",
            "public_dns": "ec2-3-34-49-131.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.49.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "COST_CENTER": "payer",
                  "CodePath": "/ENV/DEV/Network",
                  "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
                  "CodeRevision": "main",
                  "Environment": "poc",
                  "Project": "kkm",
                  "TerraformManaged": "true"
                },
                "throughput": 125,
                "volume_id": "vol-02f1f33ec99f8ed4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0691cb5cdf8e490c4",
            "tags": {
              "Name": "poc-kkm-bastion-ec2-an2-a",
              "Service": "bastion-ec2"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-bastion-ec2-an2-a",
              "Project": "kkm",
              "Service": "bastion-ec2",
              "TerraformManaged": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b4a005648afe39b"
            ]
          },
          "dependencies": [
            "module.Network.aws_iam_instance_profile.bastion_profile",
            "module.Network.aws_iam_role.bastion_role",
            "module.Network.aws_security_group.bastion_sg",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:internet-gateway/igw-0d6d7787b29505c32",
            "id": "igw-0d6d7787b29505c32",
            "owner_id": "539666729110",
            "tags": {
              "Name": "poc-kkm-internetgw-igw",
              "Service": "igw"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-internetgw-igw",
              "Project": "kkm",
              "Service": "igw",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0525853df9163f7a2",
            "association_id": "eipassoc-0ea6c0dc3301b1c60",
            "connectivity_type": "public",
            "id": "nat-0554aefc4d8b43823",
            "network_interface_id": "eni-01d63669a392d296e",
            "private_ip": "172.33.0.33",
            "public_ip": "43.203.47.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0691cb5cdf8e490c4",
            "tags": {
              "Name": "poc-kkm-nat-an2-a",
              "Service": "nat-an2-a"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-nat-an2-a",
              "Project": "kkm",
              "Service": "nat-an2-a",
              "TerraformManaged": "true"
            }
          },
          "dependencies": [
            "module.Network.aws_eip.eip_nat",
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:route-table/rtb-0cf04edafd140393d",
            "id": "rtb-0cf04edafd140393d",
            "owner_id": "539666729110",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "poc-kkm-pod-rt",
              "Service": "rt"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pod-rt",
              "Project": "kkm",
              "Service": "rt",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:route-table/rtb-0883af8a38a4ddb4f",
            "id": "rtb-0883af8a38a4ddb4f",
            "owner_id": "539666729110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0554aefc4d8b43823",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-kkm-pri-rt-an2-a",
              "Service": "rt"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pri-rt-an2-a",
              "Project": "kkm",
              "Service": "rt",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_eip.eip_nat",
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_nat_gateway.nat_gateways",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:route-table/rtb-066409202d2ce28c2",
            "id": "rtb-066409202d2ce28c2",
            "owner_id": "539666729110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6d7787b29505c32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc-kkm-pub-rt",
              "Service": "rt"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pub-rt",
              "Project": "kkm",
              "Service": "rt",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e348c0b0a9add7",
            "route_table_id": "rtb-0883af8a38a4ddb4f",
            "subnet_id": "subnet-0bbe3b413ba2a3fbf"
          },
          "dependencies": [
            "module.Network.aws_eip.eip_nat",
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_nat_gateway.nat_gateways",
            "module.Network.aws_route_table.private_route_tables",
            "module.Network.aws_subnet.private_db_subnets",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031946a57a37c2f58",
            "route_table_id": "rtb-0883af8a38a4ddb4f",
            "subnet_id": "subnet-0341f3a2133720365"
          },
          "dependencies": [
            "module.Network.aws_eip.eip_nat",
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_nat_gateway.nat_gateways",
            "module.Network.aws_route_table.private_route_tables",
            "module.Network.aws_subnet.private_db_subnets",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pod_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef777a464a1e2603",
            "route_table_id": "rtb-0cf04edafd140393d",
            "subnet_id": "subnet-0f31189c578840eb2"
          },
          "dependencies": [
            "module.Network.aws_route_table.pod_route_table",
            "module.Network.aws_subnet.private_pod_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e31dcabef5691d0f",
            "route_table_id": "rtb-0cf04edafd140393d",
            "subnet_id": "subnet-05b0ab27efbcce8bc"
          },
          "dependencies": [
            "module.Network.aws_route_table.pod_route_table",
            "module.Network.aws_subnet.private_pod_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4c6a7c558a28620",
            "route_table_id": "rtb-0883af8a38a4ddb4f",
            "subnet_id": "subnet-08407acf3c8acabbd"
          },
          "dependencies": [
            "module.Network.aws_eip.eip_nat",
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_nat_gateway.nat_gateways",
            "module.Network.aws_route_table.private_route_tables",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0989f58866d907279",
            "route_table_id": "rtb-0883af8a38a4ddb4f",
            "subnet_id": "subnet-02663d83cccf21f33"
          },
          "dependencies": [
            "module.Network.aws_eip.eip_nat",
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_nat_gateway.nat_gateways",
            "module.Network.aws_route_table.private_route_tables",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ddb800190b604df",
            "route_table_id": "rtb-066409202d2ce28c2",
            "subnet_id": "subnet-0691cb5cdf8e490c4"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_route_table.public_route_table",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cac77638037314b",
            "route_table_id": "rtb-066409202d2ce28c2",
            "subnet_id": "subnet-0f5b65e65065bbdd5"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.igw",
            "module.Network.aws_route_table.public_route_table",
            "module.Network.aws_subnet.public_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-08b4a005648afe39b",
            "description": "Security group for Bastion host in poc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b4a005648afe39b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "poc-kkm-bastion-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-bastion-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-bastion-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0a3ab2da643bcfbfb",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3ab2da643bcfbfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20",
                  "100.64.0.0/20"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "poc-kkm-efs-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-efs-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-efs-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_cwlogs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-00547dac72fa20813",
            "description": "Security group for CWLogs VPC Endpoint in poc",
            "egress": [],
            "id": "sg-00547dac72fa20813",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-cwlogs-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-cwlogs-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-cwlogs-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0cf412c29bef9f586",
            "description": "Security group for EC2 VPC Endpoint in poc",
            "egress": [],
            "id": "sg-0cf412c29bef9f586",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20",
                  "100.64.0.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-ec2-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-ec2-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-ec2-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_ecr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-034efc8ccf56af5c6",
            "description": "Security group for ECR VPC Endpoint in poc",
            "egress": [],
            "id": "sg-034efc8ccf56af5c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20",
                  "100.64.0.0/20"
                ],
                "description": "Allow HTTPS traffic from VPC and secondary CIDR",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-ecr-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-ecr-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-ecr-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-03831fbab2fc0e096",
            "description": "Security group for EKS VPC Endpoint in poc",
            "egress": [],
            "id": "sg-03831fbab2fc0e096",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-eks-auth-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-eks-auth-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-eks-auth-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0dfb6de84b4ab2965",
            "description": "Security group for ELB VPC Endpoint in poc",
            "egress": [],
            "id": "sg-0dfb6de84b4ab2965",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20",
                  "100.64.0.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-elb-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-elb-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-elb-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_iam_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0174e563136556d75",
            "description": "Security group for IAM VPC Endpoint in poc",
            "egress": [],
            "id": "sg-0174e563136556d75",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20",
                  "100.64.0.0/20"
                ],
                "description": "Allow HTTPS traffic from VPC and secondary CIDR for IAM API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-iam-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-iam-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-iam-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ep_sts_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:security-group/sg-0480c84f745cc6dc3",
            "description": "Security group for STS VPC Endpoint in poc",
            "egress": [],
            "id": "sg-0480c84f745cc6dc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.33.0.0/20",
                  "100.64.0.0/20"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poc-kkm-ep-sts-sg",
            "name_prefix": "",
            "owner_id": "539666729110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc-kkm-ep-sts-sg",
              "Service": "sg"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ep-sts-sg",
              "Project": "kkm",
              "Service": "sg",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-0bbe3b413ba2a3fbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.33.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbe3b413ba2a3fbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-db-private-subnet-an2-a",
              "Service": "db-an2-a"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-db-private-subnet-an2-a",
              "Project": "kkm",
              "Service": "db-an2-a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-0341f3a2133720365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.33.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0341f3a2133720365",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-db-private-subnet-an2-c",
              "Service": "db-an2-c"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-db-private-subnet-an2-c",
              "Project": "kkm",
              "Service": "db-an2-c",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_pod_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-0f31189c578840eb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "100.64.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31189c578840eb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-pod-private-subnet-an2-a",
              "Service": "pod-an2-a",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "0"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pod-private-subnet-an2-a",
              "Project": "kkm",
              "Service": "pod-an2-a",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "0"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-05b0ab27efbcce8bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "100.64.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b0ab27efbcce8bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-pod-private-subnet-an2-c",
              "Service": "pod-an2-c",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "0"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-pod-private-subnet-an2-c",
              "Project": "kkm",
              "Service": "pod-an2-c",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "0"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-08407acf3c8acabbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.33.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08407acf3c8acabbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-eks-private-subnet-an2-a",
              "Service": "private-an2-a",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-eks-private-subnet-an2-a",
              "Project": "kkm",
              "Service": "private-an2-a",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-02663d83cccf21f33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.33.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02663d83cccf21f33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-eks-private-subnet-an2-c",
              "Service": "private-an2-c",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-eks-private-subnet-an2-c",
              "Project": "kkm",
              "Service": "private-an2-c",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-0691cb5cdf8e490c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.33.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0691cb5cdf8e490c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-public-subnet-an2-a",
              "Service": "public",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-public-subnet-an2-a",
              "Project": "kkm",
              "Service": "public",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:subnet/subnet-0f5b65e65065bbdd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.33.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5b65e65065bbdd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539666729110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc-kkm-public-subnet-an2-c",
              "Service": "public",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-public-subnet-an2-c",
              "Project": "kkm",
              "Service": "public",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc/vpc-011ebc81521b43f44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.33.0.0/20",
            "default_network_acl_id": "acl-01d7d167151c7dc02",
            "default_route_table_id": "rtb-04481abad4770b0b1",
            "default_security_group_id": "sg-0eb5338b8e7a4eeca",
            "dhcp_options_id": "dopt-082b2de0972a7f7f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011ebc81521b43f44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04481abad4770b0b1",
            "owner_id": "539666729110",
            "tags": {
              "Name": "poc-kkm-vpc",
              "Service": "vpc",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-vpc",
              "Project": "kkm",
              "Service": "vpc",
              "TerraformManaged": "true",
              "kubernetes.io/cluster/poc-kkm-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cwlogs_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-0b09c4dabf58126d2",
            "dns_entry": [
              {
                "dns_name": "vpce-0b09c4dabf58126d2-n3yx0ept.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0b09c4dabf58126d2-n3yx0ept-ap-northeast-2c.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0b09c4dabf58126d2-n3yx0ept-ap-northeast-2a.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "logs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z08056552VT0JM2F6HXG1"
              },
              {
                "dns_name": "logs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0157898M3JYNH7KEBPW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b09c4dabf58126d2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-008d5fdfad4b5f316",
              "eni-0868a12c96ae321e8"
            ],
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00547dac72fa20813"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.logs",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.33.1.194",
                "subnet_id": "subnet-08407acf3c8acabbd"
              },
              {
                "ipv4": "172.33.2.33",
                "subnet_id": "subnet-02663d83cccf21f33"
              }
            ],
            "subnet_ids": [
              "subnet-02663d83cccf21f33",
              "subnet-08407acf3c8acabbd"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-cwlogs-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-cwlogs-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_security_group.ep_cwlogs_sg",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-0154b80d2cd88addc",
            "dns_entry": [
              {
                "dns_name": "vpce-0154b80d2cd88addc-94v83vmc.ec2.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0154b80d2cd88addc-94v83vmc-ap-northeast-2a.ec2.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0154b80d2cd88addc-94v83vmc-ap-northeast-2c.ec2.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z07910246UZ498G9E8AL"
              },
              {
                "dns_name": "ec2.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z08152391CBV3S835E4Q4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0154b80d2cd88addc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b45b4da82e21ddeb",
              "eni-0c6a6f7853e54e47b"
            ],
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0cf412c29bef9f586"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.33.1.56",
                "subnet_id": "subnet-08407acf3c8acabbd"
              },
              {
                "ipv4": "172.33.2.70",
                "subnet_id": "subnet-02663d83cccf21f33"
              }
            ],
            "subnet_ids": [
              "subnet-02663d83cccf21f33",
              "subnet-08407acf3c8acabbd"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-ec2-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ec2-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_security_group.ep_ec2_sg",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-0808676602e4189d0",
            "dns_entry": [
              {
                "dns_name": "vpce-0808676602e4189d0-hwgegba1.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0808676602e4189d0-hwgegba1-ap-northeast-2c.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0808676602e4189d0-hwgegba1-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02284052CQJ3ONKJDFFO"
              },
              {
                "dns_name": "ecr.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z01572472H76W2V41KNSA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0808676602e4189d0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ae8827d7d92fef06",
              "eni-0c35e4aa42cd02e41"
            ],
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-034efc8ccf56af5c6"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.33.1.91",
                "subnet_id": "subnet-08407acf3c8acabbd"
              },
              {
                "ipv4": "172.33.2.86",
                "subnet_id": "subnet-02663d83cccf21f33"
              }
            ],
            "subnet_ids": [
              "subnet-02663d83cccf21f33",
              "subnet-08407acf3c8acabbd"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-ecr-api-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ecr-api-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_security_group.ep_ecr_sg",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-00ad1101ee2545e8d",
            "dns_entry": [
              {
                "dns_name": "vpce-00ad1101ee2545e8d-ef72nr00.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00ad1101ee2545e8d-ef72nr00-ap-northeast-2c.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00ad1101ee2545e8d-ef72nr00-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02262291IPI8DM2G3JE0"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02262291IPI8DM2G3JE0"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z02274941WMM7A5VT20WT"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z02274941WMM7A5VT20WT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00ad1101ee2545e8d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01c428e9c3743a907",
              "eni-06e8a1acd61133f16"
            ],
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-034efc8ccf56af5c6"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.33.1.124",
                "subnet_id": "subnet-08407acf3c8acabbd"
              },
              {
                "ipv4": "172.33.2.150",
                "subnet_id": "subnet-02663d83cccf21f33"
              }
            ],
            "subnet_ids": [
              "subnet-02663d83cccf21f33",
              "subnet-08407acf3c8acabbd"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-ecr-dkr-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-ecr-dkr-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_security_group.ep_ecr_sg",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elb_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-0f5423421c91e0fe7",
            "dns_entry": [
              {
                "dns_name": "vpce-0f5423421c91e0fe7-gpdq9ggs.elasticloadbalancing.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0f5423421c91e0fe7-gpdq9ggs-ap-northeast-2c.elasticloadbalancing.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0f5423421c91e0fe7-gpdq9ggs-ap-northeast-2a.elasticloadbalancing.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "elasticloadbalancing.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02271445WLPOITI0B5F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f5423421c91e0fe7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-037e43a07cdbc07f4",
              "eni-04752bca2e4db963f"
            ],
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dfb6de84b4ab2965"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.elasticloadbalancing",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.33.1.216",
                "subnet_id": "subnet-08407acf3c8acabbd"
              },
              {
                "ipv4": "172.33.2.65",
                "subnet_id": "subnet-02663d83cccf21f33"
              }
            ],
            "subnet_ids": [
              "subnet-02663d83cccf21f33",
              "subnet-08407acf3c8acabbd"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-elb-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-elb-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_security_group.ep_elb_sg",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-0940412a1c3634cd3",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0940412a1c3634cd3",
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cf04edafd140393d"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-s3-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-s3-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_route_table.pod_route_table",
            "module.Network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:539666729110:vpc-endpoint/vpce-013ea3351323e99f2",
            "dns_entry": [
              {
                "dns_name": "vpce-013ea3351323e99f2-qyxpq7vy.sts.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-013ea3351323e99f2-qyxpq7vy-ap-northeast-2c.sts.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-013ea3351323e99f2-qyxpq7vy-ap-northeast-2a.sts.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "sts.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z08040341GMY4OVLKD4XZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-013ea3351323e99f2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a4bd042573b45bc3",
              "eni-0ed73b144360fd009"
            ],
            "owner_id": "539666729110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0480c84f745cc6dc3"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.sts",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.33.1.36",
                "subnet_id": "subnet-08407acf3c8acabbd"
              },
              {
                "ipv4": "172.33.2.91",
                "subnet_id": "subnet-02663d83cccf21f33"
              }
            ],
            "subnet_ids": [
              "subnet-02663d83cccf21f33",
              "subnet-08407acf3c8acabbd"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-kkm-sts-vpcend",
              "Project": "kkm",
              "Service": "vpce"
            },
            "tags_all": {
              "COST_CENTER": "payer",
              "CodePath": "/ENV/DEV/Network",
              "CodeRepo": "https://gitlab.wb.mzcstc.com/KimKyoungMin/terraform-eks.git",
              "CodeRevision": "main",
              "Environment": "poc",
              "Name": "poc-kkm-sts-vpcend",
              "Project": "kkm",
              "Service": "vpce",
              "TerraformManaged": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-011ebc81521b43f44"
          },
          "dependencies": [
            "module.Network.aws_security_group.ep_sts_sg",
            "module.Network.aws_subnet.private_subnets",
            "module.Network.aws_vpc.vpc",
            "module.Network.data.aws_availability_zones.available",
            "module.Network.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}